# Personal-Module-Init-Setup

./: .gitignore  README.md  practice_01_main.py  practice_02_main.py  pyproject.toml  requirements.txt
data/result/: del
docs/: del
old_release/: del
src/core/: del
src/core_module_name/: TEMPLATE.py  __init__.py  _version.py  cli.py
src/core_module_name/core/: utils.py
src/practice_01/core/: base.py  basis_types.py
src/practice_01/extends/: facade_workflow.py
src/practice_02/: utils.py
src/practice_02/core/: base.py  basis_types.py
src/practice_02/extends/: facade_workflow.py
tests/: del
